fix: height of pic on mobile

--- a/styles.css
+++ b/styles.css
@@ -950,7 +950,7 @@ body {
     grid-area: auto !important;
   }
   .team-image img {
-    height: 400px;
+    height: 300px;
   }
   .contact-form-section.in-view {
     width: 90%;
